tests/ui/wrong_arg_count.stderr
Error [E0104]: `show` expects 1 argument, got 2
  --> tests/ui/wrong_arg_count.lex:6:5
    |
  6 |     show(1, 2);
    |     ^^^^
 Why: every argument must match a parameter
 Fix: check the definition of `show`
