tests/ui/wrong_arg_count.jet
fn show(n: Int) {
    print(n);
}

fn main() {
    show(1, 2);
}
